--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -44,12 +44,19 @@
     text-align: center;
 }
 
+.selection-buttons .selected-button { /* 선택된 버튼 스타일 */
+    background-color: white; /* 선택된 버튼의 파란 배경색 */
+    color: #0066ff; /* 선택된 버튼의 글자색 */
+    border: 2px solid #0066ff;
+}
+
 .selection-buttons {
     display: flex;
     gap: 10px;
     justify-content: center;
     flex-wrap: wrap; /* 버튼이 화면에 맞게 줄 바꿈되도록 설정 */
 }
+
 
 .selection-buttons button {
     padding: 12px 20px;
@@ -63,7 +70,7 @@
 }
 
 .selection-buttons button:hover {
-    background-color: #0056cc;
+    background-color: #ddd;
 }
 
 /* 우측 패널 스타일 */
