FIX : 전송버튼 이미지 화이트로 교체, 버튼끼리 margin 부여, hover 색상 변경, 메이저 부분 단과대로 변경

--- a/src/components/Search/SearchBar.css
+++ b/src/components/Search/SearchBar.css
@@ -49,6 +49,10 @@
 
 }
 
-.voice-button:hover, .send-button:hover {
-    background-color: #f0f0f0; /* 호버 시 배경색 변경 */
+.voice-button:hover{
+    background-color: rgba(240, 240, 240, 0.78); /* 호버 시 배경색 변경 */
+}
+
+.send-button:hover {
+    background-color: #005bb5;
 }
