--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -4,4 +4,16 @@
     text-align: center; /* 텍스트 가운데 정렬 */
     font-size: 14px; /* 폰트 크기 설정 */
     color: #555; /* 텍스트 색상 */
+    background-color: #f8f9fa; /* 배경색 설정 */
+}
+
+.team-info-link {
+    color: #555; /* 링크 색상 */
+    text-decoration: none; /* 기본 밑줄 제거 */
+    font-weight: bold; /* 텍스트 굵게 */
+}
+
+.team-info-link:hover, .hansung-link:hover  {
+    text-decoration: underline; /* 호버 시 밑줄 표시 */
+    color: #556; /* 호버 시 색상 변경 */
 }
