--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,10 +1,11 @@
 /* Footer.css */
+
 .footer {
-    padding: 20px 0; /* 위아래 20px 간격 */
+    padding: 40px 0; /* 위아래 20px 간격 */
     text-align: center; /* 텍스트 가운데 정렬 */
     font-size: 14px; /* 폰트 크기 설정 */
     color: #555; /* 텍스트 색상 */
-    background-color: #f8f9fa; /* 배경색 설정 */
+    /*background-color: #f8f9fa; !* 배경색 설정 *!*/
 }
 
 .team-info-link {
