--- a/src/components/Home/Header/Navbar.css
+++ b/src/components/Home/Header/Navbar.css
@@ -3,19 +3,36 @@
 /* 네비게이션 바 전체를 중앙 정렬 */
 .navbar-container {
     display: flex;
-    justify-content: center; /* 수평 중앙 정렬 */
-    margin-top: 20px;
-    margin-bottom: 20px;
+    justify-content: center; /* 네비게이션 바를 수평 중앙에 배치 */
+    margin-top: 20px; /* 상단 여백 */
+    margin-bottom: 20px; /* 하단 여백 */
 }
 
-/* 브랜드(로고)에 마우스를 올렸을 때 커서 모양 변경 및 여백 추가 */
+/* 로고에 마우스를 올렸을 때 커서 모양을 포인터로 변경하여 클릭 가능하다는 느낌을 줌 */
 .navbar-brand {
-    cursor: pointer; /* 클릭 가능한 커서 모양 */
-    margin: 20px; /* 위아래 여백을 20px로 설정 */
+    cursor: pointer; /* 커서를 포인터 모양으로 변경 */
+    margin: 20px; /* 로고 상하 좌우 여백을 20px로 설정 */
 }
 
 /* 로고 이미지의 크기를 조정 */
 .navbar-logo {
-    width: 30px; /* 로고 너비를 30px로 설정 */
-    height: auto; /* 이미지 비율을 유지하며 높이를 자동 조정 */
+    width: 50px; /* 로고 너비를 60px로 설정 */
+    height: auto; /* 이미지 비율 유지 */
+    transition: transform 0.3s ease; /* 크기 변경에 부드러운 전환 */
+}
+
+/* 뒤로가기 버튼 스타일 */
+.back-button { /* 뒤로가기 버튼에 크기와 전환 효과 추가 */
+    position: absolute;
+    left: 20px; /* 네비바 왼쪽에 고정 */
+    opacity: 0.6; /* 반투명 효과 */
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    transition: transform 0.3s ease, opacity 0.3s ease; /* 크기 및 투명도 전환 */
+}
+
+.back-button:hover {
+    opacity: 1; /* 호버 시 투명도 */
+    transform: scale(1.1); /* 확대 효과 */
 }
