--- a/src/components/Home/Search/SuggestedQuestions.css
+++ b/src/components/Home/Search/SuggestedQuestions.css
@@ -17,8 +17,19 @@
     text-align: center;
     width: auto; /* 버튼 길이를 내용에 맞게 플렉서블하게 설정 */
     max-width: 45%; /* 너무 길어지지 않도록 최대 너비 제한 (화면 반 절 이하로 설정) */
+
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .suggestion-button:hover {
     background-color: #e0e0e0; /* 호버 시 배경색 */
 }
+
+
+.suggestion-button {
+
+
+}
+
