--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -5,7 +5,10 @@
     text-align: center; /* 텍스트 가운데 정렬 */
     font-size: 14px; /* 폰트 크기 설정 */
     color: #555; /* 텍스트 색상 */
-    /*background-color: #f8f9fa; !* 배경색 설정 *!*/
+}
+
+.footer-content {
+    margin-bottom: 15px; /* 링크 그룹 하단 여백 */
 }
 
 .team-info-link {
@@ -17,4 +20,38 @@
 .team-info-link:hover, .hansung-link:hover  {
     text-decoration: underline; /* 호버 시 밑줄 표시 */
     color: #556; /* 호버 시 색상 변경 */
+}
+
+/* 토글 스위치 스타일 */
+.toggle-switch {
+    width: 50px;
+    height: 24px;
+    background-color: #ccc;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px auto; /* 가운데 정렬 */
+    padding: 0 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* 토글 원의 초기 위치 */
+.toggle-circle {
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+}
+
+/* 다크 모드일 때 토글 위치 및 배경색 */
+.toggle-dark {
+    transform: translateX(26px);
+    background-color: #333;
+}
+
+.toggle-light {
+    transform: translateX(0);
 }
