--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -139,6 +139,7 @@ html, body {
 
 .right-panel.full-width { /* 우측 패널 확장 */
     width: 100%;
+    height: 96.9%; /* 패널이 전체 높이에 맞추어 고정되도록 설정 */
 }
 
 .typing-text-container {
@@ -154,7 +155,6 @@ html, body {
     color: #333;
     white-space: nowrap;
     overflow: hidden;
-    /*border-right: 3px solid black; !* 커서 효과 *!*/
     animation: typing 3s steps(20, end) forwards; /* 애니메이션 설정 */
     text-align: center;
 }
