--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -90,8 +90,8 @@ html, body {
 }
 
 .selection-group-title {
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 15px;
+    /*font-weight: bold;*/
     margin-bottom: 10px;
     color: #333;
     text-align: center;
