--- a/src/components/Chat/ChatWindow.css
+++ b/src/components/Chat/ChatWindow.css
@@ -4,7 +4,7 @@
     max-height: 500px; /* 기본 홈 페이지에서의 최대 높이 */
     overflow-y: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse; /* 최신 메시지가 아래로 쌓이도록 설정 */
     transition: height 0.5s ease, padding 0.5s ease, max-height 0.3s ease /* 확장 애니메이션 */
 }
 
@@ -12,7 +12,7 @@
 .chat-window.expanded {
     max-height: 1000px; /* 확장된 상태에서의 최대 높이 */
     padding: 20px; /* 확장 후 패딩 조정 */
-    height: 95vh; /* 확장 애니메이션용 */
+    height: 80%; /* 확장 애니메이션용 */
     transition: height 0.3s ease; /* 스크롤 애니메이션 부드럽게 적용 */
 }
 
@@ -21,12 +21,12 @@
 /* 공통 메시지 스타일 */
 .message {
     padding: 10px;
-    border-radius: 10px; /* 둥근 모서리 */
+    border-radius: 35px; /* 둥근 모서리 */
     margin: 10px 0;
-    max-width: 80%;
+    max-width: 65%;
     display: inline-block;
     word-wrap: break-word; /* 긴 텍스트 줄바꿈 */
-    border: 1px solid; /* 기본 테두리 설정 */
+    border: 2px solid; /* 기본 테두리 설정 */
 }
 
 /* 사용자 메시지 스타일 */
@@ -53,7 +53,7 @@
     height: 35px;
     margin-right: 10px; /* 텍스트와의 간격 */
     border-radius: 50%; /* 원형 이미지 */
-    border: 2px solid white;
+    /*border: 2px solid white;*/
 }
 
 /* 추천 링크 스타일 */
@@ -76,4 +76,21 @@
 
 .ref-item a:hover {
     color: #005bb5;
+}
+
+/* QR 링크 토글 버튼 */
+.qr-toggle-button {
+    background: none;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 5px;
+    text-decoration: none;
+
+}
+
+/* QR 코드 및 링크 영역 */
+.qr-section {
+    margin-top: 10px;
 }
