--- a/src/components/Chat/ChatWindow.css
+++ b/src/components/Chat/ChatWindow.css
@@ -16,17 +16,27 @@
     transition: height 0.3s ease; /* 스크롤 애니메이션 부드럽게 적용 */
 }
 
-
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(10px); /* 아래에서 위로 */
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
 /* 공통 메시지 스타일 */
 .message {
-    padding: 10px;
+    padding: 15px 30px;
     border-radius: 35px; /* 둥근 모서리 */
     margin: 10px 0;
     max-width: 65%;
     display: inline-block;
     word-wrap: break-word; /* 긴 텍스트 줄바꿈 */
     border: 2px solid; /* 기본 테두리 설정 */
+    animation: fadeInUp 1s ease-in-out; /* 애니메이션 추가 */
 }
 
 /* 사용자 메시지 스타일 */
