--- a/src/components/Home/Search/SuggestedQuestions.css
+++ b/src/components/Home/Search/SuggestedQuestions.css
@@ -1,35 +1,32 @@
+/* 추천 질문 컨테이너 스타일 */
 .suggested-questions-container {
-    display: flex;
-    width: 100%;
-    background-position: center; /* 아이콘 중앙 정렬 */
-    flex-wrap: wrap; /* 버튼이 화면 너비에 맞게 줄 바꿈되도록 설정 */
+    display: flex; /* 플렉스 박스 사용 */
+    width: 100%; /* 부모 요소의 너비를 가득 채움 */
+    flex-wrap: wrap; /* 버튼이 화면에 맞게 줄바꿈되도록 설정 */
     gap: 10px; /* 버튼 사이 간격 */
-    justify-content: center; /* 버튼들이 좌우 대칭으로 중앙에 위치하도록 설정 */
-    /*margin: 20px;*/
-    padding: 10px;
-    box-sizing: border-box; /* 박스 모델 설정 */
+    justify-content: center; /* 버튼들을 좌우 대칭으로 중앙에 정렬 */
+
+
 }
 
+/* 추천 질문 버튼 스타일 */
 .suggestion-button {
     padding: 10px 20px; /* 버튼 내부 여백 */
-    background-color: #f0f0f0;
+    background-color: #f0f0f0; /* 밝은 회색 배경 */
     border-radius: 35px; /* 둥근 모서리 */
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); /* 그림자 */
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    text-align: center;
-    width: auto; /* 버튼 길이를 내용에 맞게 플렉서블하게 설정 */
-    max-width: 45%; /* 너무 길어지지 않도록 최대 너비 제한 (화면 반 절 이하로 설정) */
-
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); /* 약간의 그림자 효과 */
+    font-size: 16px; /* 텍스트 크기 */
+    cursor: pointer; /* 커서를 포인터로 변경 */
+    transition: background-color 0.3s; /* 배경 전환 효과 */
+    text-align: center; /* 텍스트 중앙 정렬 */
+    width: auto; /* 버튼 길이를 내용에 맞게 조정 */
+    max-width: 45%; /* 너무 길어지지 않도록 최대 너비 제한 (화면 반절 이하) */
+    display: flex; /* 플렉스 박스 */
+    align-items: center; /* 텍스트 수직 중앙 정렬 */
+    margin-bottom: 10px; /* 버튼 하단 간격 */
 }
 
+/* 추천 질문 버튼 호버 스타일 */
 .suggestion-button:hover {
-    background-color: #e0e0e0; /* 호버 시 배경색 */
+    background-color: #e0e0e0; /* 호버 시 밝은 회색 배경 */
 }
-
-
-
