--- a/src/components/Chat/ChatWindow.css
+++ b/src/components/Chat/ChatWindow.css
@@ -117,7 +117,38 @@
 
 }
 
-/* QR 코드 및 링크 영역 */
-.qr-section {
-    margin-top: 10px;
+
+.qr-share-button {
+    background-color: white;
+    width: 10%;
+    color: #007bff;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin: 10px 0;
+    cursor: pointer;
+    font-size: 16px;
 }
+
+/*.qr-share-button:hover {*/
+/*    background-color: #0056b3;*/
+/*}*/
+
+.qr-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+
+.qr-url {
+    margin-top: 10px;
+    color: #555;
+    font-size: 14px;
+    word-break: break-all;
+}
+
