--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -130,6 +130,7 @@ html, body {
 /* 버튼 호버 스타일 */
 .selection-buttons button:hover {
     background-color: #ddd; /* 밝은 회색 배경 */
+    /*background-color: #005bb5; !* 밝은 회색 배경 *!*/
 }
 
 /* 우측 패널 기본 스타일 */
