--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -60,6 +60,7 @@ html, body {
     align-items: center; /* 중앙 정렬 */
     border-right: 1px solid #ddd; /* 오른쪽 경계선 */
     transition: transform 0.5s ease, opacity 0.5s ease; /* 전환 효과 */
+
 }
 
 /* 좌측 패널 애니메이션 원점 설정 */
@@ -88,7 +89,7 @@ html, body {
 /* 그룹 스타일 (좌측 패널 내부 그룹) */
 .selection-group {
     width: 100%; /* 가로 폭 전체 사용 */
-    margin-top: 20px; /* 상단 여백 */
+    margin-top: 30px; /* 상단 여백 */
     text-align: left; /* 텍스트 왼쪽 정렬 */
 }
 
@@ -131,6 +132,28 @@ html, body {
 .selection-buttons button:hover {
     background-color: #ddd; /* 밝은 회색 배경 */
     /*background-color: #005bb5; !* 밝은 회색 배경 *!*/
+}
+
+.icon-buttons {
+    display: flex;
+    justify-content: center; /* 버튼들을 중앙 정렬 */
+    gap: 50px; /* 버튼 사이 간격 */
+    width: 100%; /* 버튼 컨테이너 너비 */
+    margin-top: auto; /* 패널의 하단으로 밀림 */
+    margin-bottom: 20px;
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0; /* 버튼의 여백 제거 */
+}
+
+.icon-button img {
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
 }
 
 /* 우측 패널 기본 스타일 */
