--- a/src/components/Home/Weather/WeatherCard.css
+++ b/src/components/Home/Weather/WeatherCard.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between; /* 아이콘과 텍스트 간격 조정 */
-    margin-top: auto; /* 패널의 하단으로 밀림 */
+    /*margin-top: auto; !* 패널의 하단으로 밀림 *!*/
     width: 60%; /* 패널 너비에 맞춤보다 좀 좁게 */
     max-width: 200px; /* 카드 너비를 제한하여 중앙 정렬 효과 */
     margin-left: auto; /* 좌우 중앙 정렬 */
