--- a/src/components/Mobile/MobilePage.css
+++ b/src/components/Mobile/MobilePage.css
@@ -21,7 +21,7 @@
     border-bottom: 1px solid #ddd;
 }
 
-.message {
+.mobile-message {
     margin: 10px 0;
     padding: 10px;
     border-radius: 10px;
