--- a/src/components/Chat/ChatWindow.css
+++ b/src/components/Chat/ChatWindow.css
@@ -9,6 +9,8 @@
     transition: height 0.5s ease, padding 0.5s ease, max-height 0.3s ease; /* 확장 애니메이션 */
 }
 
+
+
 /* 첫 메시지 전송 시 확장된 상태 */
 .chat-window.expanded {
     max-height: 1000px; /* 확장된 상태에서의 최대 높이 */
@@ -48,21 +50,47 @@
 /* 사용자 메시지 스타일 */
 .user-message {
     padding: 10px 20px;
-    background-color: #ffffff; /* 하얀 배경 */
-    color: #0073e6; /* 파란 글씨 */
     align-self: flex-end; /* 오른쪽 정렬 */
     text-align: right;
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .user-message {
+    background-color: #ffffff; /* 하얀 배경 */
+    color: #0073e6; /* 파란 글씨 */
     border-color: #0073e6; /* 파란 테두리 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .user-message {
+    background-color: #333;
+    color: #f5f5f5;
+    border-color: #f5f5f5; /* 파란 테두리 */
+
 }
 
 /* AI 응답 메시지 스타일 */
 .assistant-message {
     padding: 30px 20px;
-    background-color: #0073e6; /* 파란 배경 */
-    color: #ffffff; /* 하얀 글씨 */
     align-self: flex-start; /* 왼쪽 정렬 */
     text-align: left;
+    /*text-script : bold;*/
+
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .assistant-message {
+    background-color: #0073e6; /* 파란 배경 */
+    color: #ffffff; /* 하얀 글씨 */
     border-color: #ffffff; /* 하얀 테두리 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .assistant-message {
+    background-color: #333;
+    color: #f5f5f5;
+    border-color: #f5f5f5; /* 파란 테두리 */
+
 }
 
 /* AI 프로필 이미지 스타일 */
@@ -93,6 +121,19 @@
     border-radius: 30px; /* 둥근 모서리 */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
     text-align: center;
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .qr-grid-item {
+    background-color: white; /* 배경색 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .qr-grid-item {
+    background-color: #555555;
+    box-shadow: 0 4px 6px #f5f5f5; /* 그림자 효과 */
+
 }
 
 
