--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -7,19 +7,62 @@
     color: #555; /* 텍스트 색상 */
 }
 
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .footer {
+    color: #555; /* 텍스트 색상 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .footer {
+    color: #f5f5f5;
+
+}
+
 .footer-content {
     margin-bottom: 15px; /* 링크 그룹 하단 여백 */
 }
 
 .team-info-link {
-    color: #555; /* 링크 색상 */
+
     text-decoration: none; /* 기본 밑줄 제거 */
     font-weight: bold; /* 텍스트 굵게 */
 }
 
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .team-info-link {
+    color: #555; /* 링크 색상 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .team-info-link {
+    color: #f5f5f5;
+
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .hansung-link {
+    color: #555; /* 텍스트 색상 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .hansung-link {
+    color: white;
+
+}
+
 .team-info-link:hover, .hansung-link:hover  {
     text-decoration: underline; /* 호버 시 밑줄 표시 */
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .team-info-link:hover, .hansung-link:hover {
     color: #556; /* 호버 시 색상 변경 */
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .team-info-link:hover, .hansung-link:hover {
+    color: #f5f5f5;
+
 }
 
 /* 토글 스위치 스타일 */
