--- a/src/components/Home/Weather/WeatherCard.css
+++ b/src/components/Home/Weather/WeatherCard.css
@@ -15,6 +15,16 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 가벼운 그림자 추가 */
 }
 
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .weather-card {
+    color: #333;
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .weather-card {
+    color: #999999;
+}
+
 .weather-icon {
     font-size: 30px;
     height: 30px; /* 아이콘 높이 설정 */
@@ -22,6 +32,16 @@
     margin-right: 16px; /* 아이콘과 텍스트 간격 */
     color: #333;
     animation: icon-animation 0.5s ease-in-out;
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .weather-icon {
+    color: #333;
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .weather-icon {
+    color: #999999;
 }
 
 /* 회전하는 텍스트 스타일 */
