--- a/src/components/Home/Search/SuggestedQuestions.css
+++ b/src/components/Home/Search/SuggestedQuestions.css
@@ -12,7 +12,6 @@
 /* 추천 질문 버튼 스타일 */
 .suggestion-button {
     padding: 10px 20px; /* 버튼 내부 여백 */
-    background-color: #f0f0f0; /* 밝은 회색 배경 */
     border-radius: 35px; /* 둥근 모서리 */
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); /* 약간의 그림자 효과 */
     font-size: 16px; /* 텍스트 크기 */
@@ -26,7 +25,30 @@
     margin-bottom: 10px; /* 버튼 하단 간격 */
 }
 
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .suggestion-button {
+    background-color: #f0f0f0; /* 밝은 회색 배경 */
+
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .suggestion-button {
+    background-color: #999999; /* 밝은 회색 배경 */
+}
+
 /* 추천 질문 버튼 호버 스타일 */
 .suggestion-button:hover {
+}
+
+/* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
+body.light .suggestion-button:hover {
     background-color: #e0e0e0; /* 호버 시 밝은 회색 배경 */
+
+
+}
+
+/* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
+body.dark .suggestion-button:hover {
+    background-color: rgba(245, 245, 245, 0.75); /* 호버 시 밝은 회색 배경 */
+
 }
